--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "✯𝗩𝗖𝗣𝗹𝗮𝘆𝗕𝗼𝘁✯",
-    "logo": "https://telegra.ph/file/7ffa8d18b9b7f1b51a81e.jpg",
+    "name": "✯saifumusicbot✯",
+    "logo": "https://telegra.ph/file/800257455fd088f68181f.jpg",
     "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
     "keywords": ["music", "voicechat", "telegram"],
     "repository": "https://github.com/saifalisew1508-op/saifumusicbot",
